Implemented payment element

--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -15,12 +15,13 @@
     <div class="card box-shadow mt-40">
       <div class="card-body">
         <form name="payment-form">
+          <input id="client-secret" type="hidden" value="{{client_secret}}" />
           <div>
             <label for="email">Email address</label>
             <input type="email" class="form-control" id="email" name="email" placeholder="you@email.com">
           </div>
-          <div class="mt-20 text-center text-secondary border-placeholder">
-            Add Stripe Element here!
+          <div class="mt-20">
+            <div id="payment-element"></div>
           </div>
           <div class="mt-20">
             <button type="submit" class="btn btn-lg btn-block btn-primary">Pay $<span class="amount" data-amount="{{amount}}"></span></button>
@@ -29,4 +30,6 @@
       </div>
     </div>
   </div>
+  <script src="https://js.stripe.com/v3/"></script>
+  <script type="text/javascript" src="/js/checkout.js"></script>
 </div>
