--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -14,7 +14,7 @@
     </div>
     <div class="card box-shadow mt-40">
       <div class="card-body">
-        <form name="payment-form">
+        <form id="payment-form">
           <input id="client-secret" type="hidden" value="{{client_secret}}" />
           <div>
             <label for="email">Email address</label>
