--- a/views/success.hbs
+++ b/views/success.hbs
@@ -1,13 +1,15 @@
 <main>
   <div class="mt-40 text-center text-success">
     <h1>
-      <i class="far fa-check-circle"></i> 
+      <i class="far fa-check-circle"></i>
       Success!
     </h1>
   </div>
   <div class="mt-40 text-center">
-    <div class="mt-20 text-center text-secondary border-placeholder">
-      Add details about the payment here!
+    <div class="mt-20">
+      <div id="payment-detail"></div>
     </div>
   </div>
+  <script src="https://js.stripe.com/v3/"></script>
+  <script type="text/javascript" src="/js/success.js"></script>
 </main>
